sratom (9999) unstable;

  * Correctly read objects with several rdf:type properties

 -- David Robillard <d@drobilla.net>

sratom (0.2.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Wed, 18 Apr 2012 15:14:11 -0400
